[package]
name = "number2name"
version = "1.0.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"

[lib]
name = "number2name"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
path = "src/benchmark.rs"
harness = false

[dependencies]
lazy_static = "^1.4.0"

[dev-dependencies]
criterion = "^0.3.1"
