[package]
name = "number2name"
description = "Simple Rust library to convert an index to a name that is as short as possible."
version = "1.0.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://github.com/mverleg/number2name"
repository = "https://github.com/mverleg/number2name"
readme = "README.rst"
license = "BSD-3-Clause"
keywords = ["encoding", "decoding"]
edition = "2018"

[lib]
name = "number2name"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
path = "src/benchmark.rs"
harness = false

[dependencies]
lazy_static = "^1.4.0"

[dev-dependencies]
criterion = "^0.3.1"
