[package]
name = "number2name"
description = "Simple Rust library to convert an index to a name that is as short as possible."
version = "1.1.2"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://github.com/mverleg/number2name"
repository = "https://github.com/mverleg/number2name"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["encoding", "decoding"]
edition = "2018"

[lib]
name = "number2name"
path = "src/lib.rs"

[[bin]]
name = "number2name"
path = "src/number2name.rs"

[[bin]]
name = "name2number"
path = "src/name2number.rs"

[[bench]]
name = "benchmark"
path = "src/benchmark.rs"
harness = false

[features]
cli = ["structopt"]
builtin-charsets = ["lazy_static"]
default = ["builtin-charsets", "cli"]

[dependencies]
lazy_static = { version= "^1.4.0", optional = true }
structopt = { version = "^0.3.20", optional = true }

[dev-dependencies]
criterion = "^0.3.3"

[profile.release]
lto = true
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
debug = false
